--- a/Tecnología para la Tercera Edad/css/home.css
+++ b/Tecnología para la Tercera Edad/css/home.css
@@ -113,7 +113,9 @@
         position: relative;
     }
     
-  
+    .descripcion__div{
+        position: relative;
+    }
     
     .descripcion__div--h2 {
         display: block;
