--- a/Tecnología para la Tercera Edad/css/tutorial1.css
+++ b/Tecnología para la Tercera Edad/css/tutorial1.css
@@ -11,7 +11,8 @@ main {
     text-align: center;
 }
 .bg-succes{
-  background-color: #185c7b;
+    background-image: linear-gradient(315deg, #41d2d5, #1370fd 70%);
+    /*background-color: #185c7b;*/
 }
 
 
@@ -84,7 +85,7 @@ main {
         left: 50%;
         transform: translate(-50%, -50%);
         /*background-color: #60a803;*/
-        background: linear-gradient(#60a803, #8de933);
+        background-image: linear-gradient(315deg, #41d2d5, #1370fd 70%);
         padding: 20px;
         box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.2);
         z-index: 2;
@@ -179,9 +180,7 @@ main {
 
 .logo {
     margin-right: 20px; /* Espacio entre el logo y el título */
-    
 }
-
 .logo img {
     transition: transform 0.3s;; /* Duración de la transición y propiedad a animar */
 }
@@ -196,7 +195,7 @@ h1 {
 
 /* Estilos para el footer */
 footer {
-    background-color: #a7e952;
+    background-image: linear-gradient(315deg, #41d2d5, #1370fd 70%);
     color: #fff;
     padding: 20px;
     text-align: center;
@@ -241,7 +240,7 @@ footer a:hover {
 }
 
 .buscador button {
-    background-color: #60a803; /* Cambia el color del botón */
+    background-color: #41d2d5 ; /* Cambia el color del botón */
     color: #fff;
     border: none;
     border-radius: 25px;
@@ -252,6 +251,6 @@ footer a:hover {
 
 /* Estilos para el botón al pasar el mouse */
 .buscador button:hover {
-    background-color: #79d13f; /* Cambia el color al pasar el mouse */
+    background-color: #1370fd; /* Cambia el color al pasar el mouse */
 }
 
